sts-matomo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matomo
spec:
  serviceName: matomo
  replicas: 1
  selector:
    matchLabels:
      app: matomo
  template:
    metadata:
      labels:
        app: matomo
    spec:
      containers:
        - name: matomo
          image: matomo:5-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: matomo-data
              mountPath: /var/www/html
  volumeClaimTemplates:
    - metadata:
        name: matomo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
