service-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  clusterIP: None
  selector:
    app: mariadb
  ports:
    - port: 3306
