ingress-matomo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: reynier124-kb.my.kube.um.edu.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
